# GeometryAcceleration

./: .clang-format  .travis.yml  CMakeLists.txt
source/: CMakeLists.txt  nth_element_vs_sort.cpp
source/Acceleration/: BVH.cpp  BVH.h  CMakeLists.txt
source/Core/: CMakeLists.txt  Math.h  Types.h
source/Foundation/: AABBox.h  CMakeLists.txt  Math.h  Prim.h  Vector3.h
source/Geometry/: CMakeLists.txt  Face.cpp  Face.h  Mesh.cpp  Mesh.h  Polygon.h  Triangle.h
source/Serialization/: CMakeLists.txt  MeshSerializer.cpp  MeshSerializer.h  ObjMeshSerializer.cpp  ObjMeshSerializer.h
source/Utils/: CMakeLists.txt  Format.h  Parsing.h
source/plugins/: CMakeLists.txt
source/plugins/houdini/: CMakeLists.txt  SOP_BVH.cpp
